Fixed mentors height issues and adjusted font sizes on mobile.

--- a/style/about-project.css
+++ b/style/about-project.css
@@ -103,7 +103,7 @@
 
     .AboutProjectSection> :nth-child(2) {
         order: 2;
-        max-width: 80%;
+        max-width: 78%;
     }
 
     .AboutProjectSection> :nth-child(3){
@@ -122,6 +122,7 @@
 
 
     .AboutProjectText {
-        font-size: var(--font-size-s);
+        font-size: calc(var(--font-size-s) - 4px);
+        line-height: 1.3;
     }
 }
